# ecs-engine

./: CMakeLists.txt  LICENSE  main.cpp
Engine/: ComponentArray.hpp  ComponentManager.cpp  ComponentManager.hpp  Coordinator.hpp  Engine.hpp  EntityManager.hpp  InputManager.hpp  SystemManager.hpp  Types.hpp
Engine/Component/: Camera.h  Collider.h  Gravity.h  MeshComponent.h  Renderable.h  Transform.h
Engine/Entity/: Entity.h  EntityManager.h
Engine/System/: CameraSystem.hpp  ColliderSystem.hpp  GravitySystem.hpp  RenderSystem.hpp  System.h  TransformSystem.hpp
Game/: Game.hpp
platform/: IPlatform.h
platform/openGLPlatform/: OpenGLPlatform.cpp  OpenGLPlatform.h
renderer/: CMakeLists.txt  Renderer.h
renderer/OpenGLRenderer/: OpenGLRenderer.cpp  OpenGLRenderer.h  RenderMesh.cpp  RenderMesh.h  Shader.h
shaders/: cont_fragment.glsl  cont_vertex.glsl  fragment_shader.glsl  vertex_shader.glsl
